# AirDrop

./: .gitignore  DESIGN.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: .env.android  package-lock.json  package.json  tsconfig.json
app/src/: main.tsx  model.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: android.json  default.json  floating-main.json  floating-orb.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
app/src-tauri/src/core/: cache.rs  discovery.rs  files.rs  group.rs  identity.rs  logging.rs  mod.rs  service.rs  storage.rs  telemetry.rs
app/src-tauri/src/core/transport/: mod.rs  protocol.rs
app/src-tauri/src/platform/: clipboard_monitor.rs  extended_clipboard.rs  mod.rs
app/src-tauri/src/platform/android/: mod.rs
app/src-tauri/src/platform/linux/: mod.rs
app/src-tauri/src/platform/macos/: mod.rs
app/src-tauri/src/platform/unsupported/: mod.rs
app/src-tauri/src/platform/windows/: mod.rs
app/src/app/: App.requests.test.tsx  App.tsx  AppShell.tsx
app/src/components/: EmptyState.tsx  ErrorToast.test.tsx  ErrorToast.tsx  Icon.tsx  StatusBadge.tsx
app/src/features/clipboard/: ClipboardPage.tsx  ClipboardSwitcher.tsx  CurrentClipboard.tsx  DeviceSlotCard.tsx  clipboard.css  clipboard.test.tsx
app/src/features/devices/: DevicesPage.test.tsx  DevicesPage.tsx
app/src/features/floating/: FloatingOrbApp.test.tsx  FloatingOrbApp.tsx  FloatingOrbManager.test.tsx  FloatingOrbManager.tsx  floating-adapter.test.ts  floating-adapter.ts  floating-drag.ts  floating-events.ts  floating-geometry.test.ts  floating-geometry.ts  floating.css
app/src/features/groups/: GroupsPage.tsx
app/src/features/home/: HomePage.tsx
app/src/ipc/: client.ts  demo-client.ts  tauri-client.ts
app/src/platform/: navigation.ts  runtime.ts
app/src/styles/: global.css
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: main.tsx
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: lib.rs  main.rs  service.rs
desktop/src/app/: App.tsx  AppShell.tsx  useAppLifecycle.ts
desktop/src/components/: ActivityStatus.tsx  EmptyState.tsx  Toggle.tsx
desktop/src/ipc/: demo-client.ts  tauri-client.ts
desktop/src/styles/: tokens.css
docs/superpowers/plans/: 2026-07-11-desktop-android-optimization.md  2026-07-11-desktop-ui-mvp.md  2026-07-12-desktop-appearance-floating-orb.md  2026-07-12-elegant-light-ui.md
docs/superpowers/specs/: 2026-07-11-desktop-android-design.md  2026-07-12-desktop-appearance-floating-orb-design.md  2026-07-12-elegant-light-ui-design.md
(+31 files in other folders)
