[package]
name = "airdrop-app"
version = "0.1.0"
description = "Local-first multi-device clipboard switcher"
authors = ["AirDrop contributors"]
edition = "2021"

[lib]
name = "airdrop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
time = { version = "0.3", features = ["formatting"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
