[package]
name = "airdrop-app"
version = "0.1.6"
description = "Local-first multi-device clipboard switcher"
authors = ["AirDrop contributors"]
edition = "2021"

[lib]
name = "airdrop_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
directories = "6"
data-encoding = "2"
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2", features = ["rand_core"] }
gethostname = "1"
hkdf = "0.12"
hmac = "0.12"
keyring = { version = "3.6", features = ["apple-native", "windows-native", "linux-native-sync-persistent", "crypto-rust"] }
image = { version = "0.25", default-features = false, features = ["png"] }
mdns-sd = "0.17"
quinn = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }
rcgen = "0.13"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-process = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
time = { version = "0.3", features = ["formatting"] }
sha2 = "0.10"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
url = "2"

[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
clipboard-rs = { version = "0.3.5", default-features = false, features = ["image", "wayland"] }

[target.'cfg(any(target_os = "windows", target_os = "linux", target_os = "macos"))'.dependencies]
tauri-plugin-global-shortcut = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
